@@ -11,6 +11,7 @@ All notable changes to this project will be documented in this file.
 ### Documentation
 
 - add doxygen comments for public headers and enable graphviz support
+- setup GitHub and GitLab Pages deployment
 
 ### Macros
 
